syntax = "proto3";

package notification;

import "google/protobuf/timestamp.proto";

// Message Notification adapté à ton entity Notif
message Notification {
  string id = 1;
  string reservation_id = 2;
  string message = 3;
  google.protobuf.Timestamp notification_date = 4;
  bool is_sent = 5;
}

// Requêtes
message CreateNotificationRequest {
  string reservation_id = 1;
  string message = 2;
}

message UpdateNotificationRequest {
  string id = 1;
  string message = 2;
}

// Réponse
message NotificationResponse {
  Notification notification = 1;
}

// ========= EXPORT CSV =========

message ExportReservationsRequest {
  string user_id = 1;
}

message ExportReservationsResponse {
  string url = 1;
}

// Service gRPC principal
service NotificationService {
  rpc CreateNotification(CreateNotificationRequest) returns (Notification);
  rpc UpdateNotification(UpdateNotificationRequest) returns (Notification);
  rpc ExportReservationsToCSV(ExportReservationsRequest) returns (ExportReservationsResponse);
}
